# Python-CI

./: .coverage  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  requriements.txt  status  status.sh  status.txt  tox.ini
.github/workflows/: buid.yml  codeql-analysis.yml  python-app.yml
htmlcov/: index.html  scripts___init___py.html  scripts___main___py.html  scripts_generators_py.html  scripts_time_serie_py.html  status.json
notebooks/: test.ipynb
scripts/: __init__.py  generators.py  time_serie.py
tests/: test_time_serie.py
